ported version 1.1.0 to Minecraft 1.20-1.20.4